package org.pancakelab.service.validation;

public interface LocationValidationService {

    void validateLocationInput(String field, int value);
}
